--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>My App</title>
         <body>
             This is my app!
+            login form
         </body>
     </head>
 </html>
